# AviUtl2_ColorLUT_K_Plugin

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: releaser.yml
src/: .clang-format  CMakeLists.txt  lut.cpp  lut.hpp  main.cpp  main.def
